Updated version after release